# raphael-rs

./: Cargo.toml  index.html  serve-web.sh
.cargo/: config_wasm.toml
assets/data/: item_names_de.ron  item_names_en.ron  item_names_fr.ron  item_names_jp.ron  item_names_kr.ron  items.ron
assets/locales/: app.yaml
game_data/src/: lib.rs  locales.rs
raphael-cli/src/commands/: solve.rs
raphael-data/: Cargo.toml
raphael-data-updater/: Cargo.toml
raphael-data-updater/src/: item.rs  level_adjust_table.rs  lib.rs  main.rs  non_contiguously_indexed_array_generator.rs  recipe.rs
raphael-data/benches/: bench_game_data.rs
raphael-data/data/: item_names_de.rs  item_names_en.rs  item_names_fr.rs  item_names_jp.rs  item_names_kr.rs  items.rs
raphael-data/src/: consumables.rs  lib.rs  locales.rs  non_contiguously_indexed_array.rs  search.rs
raphael-data/src/data/: item_names_de.rs  item_names_en.rs  item_names_fr.rs  item_names_jp.rs  item_names_kr.rs  items.rs  level_adjust_table.rs  meals.rs  mod.rs  potions.rs  rlvls.rs
raphael-data/tests/: test_recipes.rs
src/: app.rs  build.rs  config.rs  main.rs  util.rs
src/widgets/: food_select.rs  item_name_label.rs  macro_view.rs  mod.rs  potion_select.rs  recipe_label.rs  recipe_select.rs  saved_rotations.rs  simulator.rs  util.rs
